# PPGSO_UFO

./: CMakeLists.txt  README.md  main.cpp  occupied_test.txt
data/: result.raw
ppgso/: mesh.cpp
shader/: diffuse_frag.glsl  phong_frag.glsl  phong_vert.glsl  texture_frag.glsl  texture_vert.glsl  transparent_frag.glsl  transparent_vert.glsl
src/: beam.cpp  beam.h  cage.cpp  cage.h  camera.cpp  camera.h  cow.cpp  cow.h  cow_shadow.cpp  cow_shadow.h  explosion.cpp  explosion.h  game_scene.cpp  generator.cpp  generator.h  grass.cpp  grass.h  ground.cpp  ground.h  house.cpp  house.h  house_shadow.cpp  house_shadow.h  object.cpp  object.h  player.cpp  player.h  room_wall.cpp  room_wall.h  scene.cpp  scene.h  tree.cpp  tree.h  tree_shadow.cpp  tree_shadow.h
src/gl9_scene/: asteroid.cpp  asteroid.h  cage.cpp  cage.h  camera.cpp  camera.h  cow_shadow.cpp  cow_shadow.h  generator.cpp  generator.h  gl9_scene.cpp  grass.cpp  grass.h  house.cpp  house.h  player.cpp  player.h  projectile.cpp  scene.cpp  scene.h  space.cpp  space.h  tree1_1.cpp  tree1_1.h  tree1_2.cpp  tree1_2.h  tree_shadow.cpp
